<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

                <TextView
                    android:id="@+id/textViewData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="Result Data"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/textViewData">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardViewHeight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:cardBackgroundColor="@color/purple_500"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="5dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/height"
                            android:backgroundTint="@color/white"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="80dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Height"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                            <TextView
                                android:id="@+id/textViewHeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0.0"
                                android:textSize="25sp"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/buttonPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Play Sound"
                        app:layout_constraintTop_toBottomOf="@+id/cardViewHeight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="50dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="20dp">

                        <!--Heading Text View-->
                        <TextView
                            android:id="@+id/txthead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/audio_recorder"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <!--This will display the status of our app when
                            we will record some audio and play that audio-->
                        <TextView
                            android:id="@+id/idTVstatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:text="@string/status"
                            android:textAlignment="center"
                            android:textSize="18sp" />

                        <!--Linear Layout for adding textviews
                            in horizontal manner-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="30dp"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <!--Textview to start audio recording
                                drawableTop will add above mic image-->
                            <TextView
                                android:id="@+id/btnRecord"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@color/purple_500"
                                android:padding="5dp"
                                android:text="@string/start_recording"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                app:drawableTopCompat="@drawable/ic_start_recording"
                                android:drawableTint="@color/white"/>

                            <!--Textview to stop audio recording
                                drawableTop will add above mic image-->
                            <TextView
                                android:id="@+id/btnStop"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@color/purple_500"
                                android:padding="5dp"
                                android:text="@string/stop_recording"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                app:drawableTopCompat="@drawable/ic_stop_recording"
                                android:drawableTint="@color/white"/>

                            <!--Textview to play audio that is recorded
                                drawableTop will add above mic image-->
                            <TextView
                                android:id="@+id/btnPlay"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="5dp"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@color/purple_500"
                                android:padding="5dp"
                                android:text="@string/play_recording"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                app:drawableTopCompat="@drawable/ic_play_audio"
                                android:drawableTint="@color/white"/>

                            <!--Textview to pause the play of audio recording
                                drawableTop will add above mic image-->
                            <TextView
                                android:id="@+id/btnStopPlay"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:background="@color/purple_500"
                                android:lines="2"
                                android:padding="5dp"
                                android:text="@string/stop_playing"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                app:drawableTopCompat="@drawable/ic_pause_audio"
                                android:drawableTint="@color/white"/>

                        </LinearLayout>
                    </RelativeLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
